# test-github-actions

./: .gitignore  CMakeLists.txt  test_mpi.cpp
.github/: release.js
.github/workflows/: CI.yml  Dispatcher.yml  Goodbye.yml  Hello.yml  Receiver.yml  nightly-release.yml  release.yml
